# oose-miniproject

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  Makefile  README.md  RUNBOOK.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: client.py  engine.py  indexes.py
backend/app/models/: common.py  files.py  notification.py  request.py  reward.py  user.py
backend/app/repositories/: base.py  notification.py  request.py  reward.py  user.py
backend/app/routers/: auth.py  files.py  health.py  notifications.py  requests.py  rewards.py  slots.py  ws.py
backend/app/scripts/: seed.py
backend/app/services/: auth.py  notification.py  request.py  reward.py  slot.py  storage.py  ws.py
backend/app/tests/: test_auth_service.py  test_request_service.py
backend/app/workers/: scheduler.py
backend/swmra_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: main.tsx
frontend/src/api/: auth.ts  client.ts  files.ts  notifications.ts  requests.ts  rewards.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: AppLayout.tsx  Button.tsx  Card.tsx  EmptyState.tsx  NotificationBell.tsx  Timeline.tsx  (+2 more)
infra/seed/: seed_slots.json  seed_users.json
(+19 files in other folders)
